plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.10.6'
}

group = 'com.example'
version = '0.0.1'

bootJar {
    archiveBaseName = 'sbt'
    archiveVersion = ''
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    runtimeOnly 'org.postgresql:postgresql'
    implementation 'io.lettuce:lettuce-core:6.7.1.RELEASE'

    implementation 'com.google.firebase:firebase-admin:9.4.3'
    implementation 'software.amazon.awssdk:s3:2.31.11'

    implementation 'org.apache.commons:commons-lang3:3.17.0'
    implementation 'org.apache.commons:commons-collections4:4.5.0'
    implementation 'org.apache.commons:commons-text:1.13.0'
    implementation 'org.apache.commons:commons-compress:1.27.1'
    implementation 'org.apache.commons:commons-csv:1.12.0'
    implementation 'org.apache.poi:poi-ooxml:5.4.1'
    implementation 'commons-codec:commons-codec:1.17.2'
    implementation('commons-validator:commons-validator:1.9.0') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    implementation 'com.google.guava:guava:33.4.8-jre'

    implementation 'com.github.pjfanning:excel-streaming-reader:5.0.3'
    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'
    implementation 'com.auth0:java-jwt:4.4.0'
    implementation 'com.atlassian:onetime:2.1.2'
    implementation 'net.coobird:thumbnailator:0.4.20'

    compileOnly 'org.projectlombok:lombok'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
